<resources>
    <string name="app_name">My Movie</string>
    <string name="selamat_datang_diaplikasi_my_movie">Selamat datang diaplikasi My Movie</string>
    <string name="username">Username..</string>
    <string name="password">Password...</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_sebagai_tamu">Masuk sebagai tamu</string>
    <string name="title_movie">Title movie</string>
    <string name="detail_akun">Detail akun</string>
    <string name="kamu_datang_sebagai_tamu">Kamu datang sebagai tamu</string>
    <string name="keluar">Keluar</string>
    <string name="gabung_tmdb_movie">Gabung TMDB Movie</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="release_date">Release date</string>
    <string name="genres">Genres</string>
    <string name="trailer">Trailer</string>
    <string name="tagline">Tagline</string>
    <string name="overview">Overview</string>
    <string name="tidak_ada_tagline">Tidak ada tagline</string>
    <string name="deskripsi_tidak_tersedia">Deskripsi tidak tersedia</string>
    <string name="favorite">Favorite</string>
    <string name="beri_rating">Beri rating</string>
    <string name="lists">Lists</string>
    <string name="ratings">Ratings</string>
    <string name="rated_movie">Rated Movie</string>
    <string name="personal_list">Personal list</string>
    <string name="nama">Nama list...</string>
    <string name="deskripsi">Deskripsi list...</string>
    <string name="buat_personal_list">Buat personal list</string>
    <string name="nama_pembuat_list">Nama pembuat list...</string>
    <string name="list_type">List type</string>
    <string name="submit_rating">Submit rating</string>
    <string name="hapus_rating">Hapus rating</string>
    <string name="sort_by">Sort by</string>
    <string name="popularity_asc">Popularity asc</string>
    <string name="popularity_desc">Popularity desc</string>
    <string name="simpan">Simpan</string>
    <string name="add_to">Add to personal list</string>
    <string name="item_count">Item count</string>
    <string name="tambah_ke_personal_list">Tambah ke personal list</string>
</resources>