<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".activity.MainActivity">


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/selamat_datang_diaplikasi_my_movie"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textColorHint="@color/grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/masuk"
        app:cornerRadius="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTamu"
        app:rippleColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/masuk_sebagai_tamu"
        android:textColor="@color/purple"
        app:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:strokeColor="@color/purple"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tidak_punya_akun"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTmdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/gabung_tmdb_movie"
            android:textColor="@color/purple"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>