<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_close_24"
        app:title="@string/sort_by"
        app:titleTextAppearance="@style/custom_text_toolbar" />


    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/sortRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbAsc"
            android:layout_marginStart="20dp"
            android:text="@string/popularity_asc"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbDesc"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/popularity_desc"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSimpan"
        app:rippleColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:cornerRadius="10dp"
        android:text="@string/simpan"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginEnd="20dp"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>



</LinearLayout>