<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_close_24"
        app:title="@string/personal_list"
        app:titleTextAppearance="@style/custom_text_toolbar" />

    <EditText
        android:id="@+id/edtListName"
        android:layout_below="@id/toolbarMovie"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_edit_text_list"
        android:hint="@string/nama"
        android:paddingHorizontal="15dp"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/edtDeskripsi"
        android:layout_below="@id/edtListName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edit_text_list"
        android:hint="@string/deskripsi"
        android:paddingHorizontal="15dp"
        android:textColorHint="@color/grey" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAddPersonalList"
        android:layout_below="@id/edtDeskripsi"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:backgroundTint="@color/purple"
        app:rippleColor="@color/white"
        app:icon="@drawable/baseline_add_24"
        app:iconTint="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>



</RelativeLayout>