<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:paddingVertical="10dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:paddingHorizontal="20dp">

    <ImageView
        android:scaleType="fitXY"
        android:id="@+id/imageList"
        android:layout_width="90dp"
        android:layout_height="140dp"/>

    <TextView
        android:layout_toEndOf="@id/imageList"
        android:layout_marginStart="10dp"
        android:id="@+id/tvDate"
        android:text="@string/release_date"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_below="@id/tvDate"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tvTitle"
        android:layout_toEndOf="@id/imageList"
        android:text="@string/title_movie"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tvOverview"
        android:layout_below="@id/tvTitle"
        android:layout_toEndOf="@id/imageList"
        android:text="@string/overview"
        android:textSize="12sp"
        android:ellipsize="end"
        android:maxLines="3"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:background="@color/grey"
        android:layout_toEndOf="@id/imageList"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</RelativeLayout>