<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AkunActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/detail_akun"
        app:titleTextAppearance="@style/custom_text_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarMovie">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_account_circle_24" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                app:rippleColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/keluar"
                android:textSize="15sp"
                app:backgroundTint="@color/red"
                app:cornerRadius="10dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lists"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/bg_card_profile"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRated"
                    app:cornerRadius="10dp"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/dark_purple_grey"
                    app:rippleColor="@color/dark_purple_grey"
                    app:strokeWidth="1dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    app:icon="@drawable/baseline_star_24"
                    app:iconTint="@color/dark_purple_grey"
                    app:iconGravity="end"
                    android:text="@string/ratings"
                    android:textColor="@color/dark_purple_grey"
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFavorite"
                    app:cornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/red"
                    app:rippleColor="@color/red"
                    app:strokeWidth="1dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    app:icon="@drawable/baseline_favorite_24"
                    app:iconTint="@color/red"
                    app:iconGravity="end"
                    android:text="@string/favorite"
                    android:textColor="@color/red"
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnList"
                    app:cornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/purple"
                    app:rippleColor="@color/purple"
                    app:strokeWidth="1dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    app:icon="@drawable/baseline_add_24"
                    app:iconTint="@color/purple"
                    app:iconGravity="end"
                    android:text="@string/buat_personal_list"
                    android:textColor="@color/purple"
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/personal_list"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPersonalList"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>